--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -1,72 +1,60 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8" />
-<title th:text="${titulo}">Insert title here</title>
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-	crossorigin="anonymous">
-</head>
+<head th:replace="layout/layout::head"></head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">Navbar</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse"
-			data-target="#navbarNav" aria-controls="navbarNav"
-			aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item active"><a class="nav-link" href="#">Home
-						<span class="sr-only">(current)</span>
-				</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Features</a>
-				</li>
-				<li class="nav-item"><a class="nav-link" href="#" th:href="@{/listar}">Listar</a></li>
-				<li class="nav-item"><a class="nav-link disabled" href="#" 
-					tabindex="-1" aria-disabled="true">Disabled</a></li>
-			</ul>
+	<header th:replace="layout/layout::header"></header>
+
+	<div class="container py-4" >
+
+		<div class="card bg-light">
+			<div class="card-header" th:text="${titulo}"></div>
+
+
+			<div class="card-body">
+				<h4 class="card-title">
+					<a th:href="@{/form}" class="btn btn-primary btn-xs"> Crear
+						cliente</a>
+				</h4>
+
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th>Id</th>
+							<th>Nombre</th>
+							<th>Apellido</th>
+							<th>Email</th>
+							<th>Fecha</th>
+							<th>editar</th>
+							<th>eliminar</th>
+						</tr>
+					</thead>
+
+					<tbody>
+						<tr th:each="cliente:${clientes}">
+							<td th:text="${cliente.id}"></td>
+							<td th:text="${cliente.nombre}"></td>
+							<td th:text="${cliente.apellido}"></td>
+							<td th:text="${cliente.email}"></td>
+							<td th:text="${cliente.createAt}"></td>
+							<td><a class="btn btn-primary btn-xs"
+								th:href="@{/form/}+${cliente.id}" th:text="'Editar'"></a></td>
+							<td><a class="btn btn-danger btn-xs"
+								th:href="@{/eliminar/}+${cliente.id}" th:text="'Eliminar'"
+								onclick="return confirm('El registro sera eliminado');"></a></td>
+						</tr>
+					</tbody>
+
+
+				</table>
+
+
+
+			</div>
+
 		</div>
-	</nav>
-
-	<div class="container">
-
-		<h1  class="text-secondary border border-success border-top-0"  th:text="${titulo}"></h1>
-		<p><a class="btn btn-success btn-xs" th:href="@{/form}"> Crear cliente</a></p>
-
-		<table class="table table-striped">
-			<thead>
-				<tr>
-					<th>Id</th>
-					<th>Nombre</th>
-					<th>Apellido</th>
-					<th>Email</th>
-					<th>Fecha</th>
-					<th>editar</th>
-					<th>eliminar</th>
-				</tr>
-			</thead>
-
-			<tbody>
-				<tr th:each="cliente:${clientes}">
-					<td th:text="${cliente.id}"></td>
-					<td th:text="${cliente.nombre}"></td>
-					<td th:text="${cliente.apellido}"></td>
-					<td th:text="${cliente.email}"></td>
-					<td th:text="${cliente.createAt}"></td>
-					<td> <a class="btn btn-primary btn-xs"  th:href="@{/form/}+${cliente.id}" th:text="'Editar'"></a></td>
-					<td> <a class="btn btn-danger btn-xs"  th:href="@{/eliminar/}+${cliente.id}" th:text="'Eliminar'" onclick="return confirm('El registro sera eliminado');"></a></td>
-				</tr>
-			</tbody>
-
-
-		</table>
-
-
 
 	</div>
-
+	<footer th:replace="layout/layout::footer"></footer>
 
 </body>
 </html>
